--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 version : "3.3"
 services :
   web :
-     image: "trainwithshubham/notes-app:latest"
+     image: "gyana1994/my-note-app:latest"
      ports :
          - "8000:8000"
